--- a/LostItemManagement/Views/Home/Update.cshtml
+++ b/LostItemManagement/Views/Home/Update.cshtml
@@ -3,10 +3,9 @@
 @{
     ViewData["Title"] = "Update Lost Items";
 }
-
+<script src="~/ts/update.js"></script>
 <div class="container mt-4">
-<h2>更新するデータ</h2>
-<form method="post" action="/Home/SaveUpdates">
+    <h2>更新するデータ</h2>
     <table class="table table-bordered text-center">
         <thead class="table-light">
             <tr>
@@ -16,28 +15,32 @@
                 <th>なくしたもの</th>
                 <th>なくした場所</th>
                 <th>なくした詳細な場所</th>
+                <th><input type="hidden" value="紛失ID2" /></th>
+                <th><input type="hidden" value="紛失フラグ" /></th>
             </tr>
         </thead>
         <tbody>
-            @for (int i = 0; i < Model.Count; i++)
+            @foreach (var item in Model)
             {
+                int index = @Model.IndexOf(item); // インデックスを計算
                 <tr>
-                    <td>@Model[i].lostId</td>
-                    <td>@Model[i].lostDate</td>
-                    <td>@Model[i].foundDate</td>
+                    <td>@(index + 1)</td>
+                    <td>@item.lostDate</td>
+                    <td>@item.foundDate</td>
                     <td>
-                        <input type="text" name="[@i].lostItem" value="@Model[i].lostItem" class="form-control" />
+                        <input type="text" value="@item.lostItem" class="form-control" />
                     </td>
                     <td>
-                        <input type="text" name="[@i].lostPlace" value="@Model[i].lostPlace" class="form-control" />
+                        <input type="text" value="@item.lostPlace" class="form-control" />
                     </td>
                     <td>
-                        <input type="text" name="[@i].lostDetailedPlace" value="@Model[i].lostDetailedPlace" class="form-control" />
+                        <input type="text" value="@item.lostDetailedPlace" class="form-control" />
                     </td>
+                    <td><input type="hidden" value="@item.lostId" /></td>
+                    <td><input type="hidden" value="@item.lostFlag" /></td>
                 </tr>
             }
         </tbody>
     </table>
-    <button type="submit" class="btn btn-primary">保存</button>
-</form>
+    <button id="submit" class="btn btn-primary">更新</button>
 </div>
